objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ActivationDate__c</fullName>
        <label>ActivationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attributes__c</fullName>
        <description>#Sprint16 #Marketing Contact Attributes</description>
        <label>Attributes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>Prensa</fullName>
                </value>
                <value>
                    <fullName>Jubilado</fullName>
                </value>
                <value>
                    <fullName>Plan Social</fullName>
                </value>
                <value>
                    <fullName>Empleado Grupo</fullName>
                </value>
                <value>
                    <fullName>Ex Empleado Grupo</fullName>
                </value>
                <value>
                    <fullName>No Vidente</fullName>
                </value>
                <value>
                    <fullName>Hipoacúsico</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Menor</fullName>
                </value>
                <value>
                    <fullName>Estratégico</fullName>
                </value>
                <value>
                    <fullName>Socio Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactIntegrationId__c</fullName>
        <description>NO BORRAR. Contact Integration Id (Id de 11 digitos que representa al Contact para la Integration con sistemas externos)</description>
        <inlineHelpText>Contact Integration Id (Id de 11 digitos que representa al Contact para la Integration con sistemas externos)</inlineHelpText>
        <label>Contact Integration Id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cuil__c</fullName>
        <description>CUIL</description>
        <label>Cuil</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentNumber__c</fullName>
        <label>DocumentNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <label>DocumentType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DocumentTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dunning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo Temporal</description>
        <label>Dunning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fraud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fraud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Femenino</fullName>
                </value>
                <value>
                    <fullName>Masculino</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                    <isActive>false</isActive>
                    <label>U</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_Email_Date__c</fullName>
        <label>Last Modified Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailing Address</label>
        <referenceTo>Address2__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicador de si el contacto fue migrado desde legado; cuando está valuado a TRUE indica de manera inequívoca que el contacto se migró de legado</description>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PermanencyDueDate__c</fullName>
        <description>Permanency Due Date</description>
        <inlineHelpText>Permanency Due Date</inlineHelpText>
        <label>Permanency Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receive_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mobile app: used to indicate if the community user wants to receive push notifications.</description>
        <label>Receive Notifications?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Offer_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mobile app: used to indicate if the community user wants to receive push notifications related with offers.</description>
        <label>Receive Offer Notifications?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Activo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Closest_Account_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Closest Account Team Member to this contact</description>
        <label>Closest Account Team Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SCP_Certa_GC__Account_Team_Member__c.SCP_Certa_GC__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SCP_Certa_GC__Account_Team_Member__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Domicilio__c</fullName>
        <label>Domicilio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Ejecutivo_de_Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ejecutivo de Cuenta</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contactos</relationshipLabel>
        <relationshipName>Contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contactos</relationshipLabel>
        <relationshipName>Contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__PictureUrl__c</fullName>
        <label>PictureUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Picture__c</fullName>
        <formula>IF(SCP_Certa_GC__PictureUrl__c != null, IMAGE(SCP_Certa_GC__PictureUrl__c, &quot;&quot;, 64, 64) , IMAGE(&quot;/img/social/unknown_profile_pic.png&quot;, &quot;&quot;, 64, 64) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__TipoDeRelacionamiento__c</fullName>
        <label>Tipo de Relacionamiento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alta</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__areadeespecialidad__c</fullName>
        <label>Área de especialidad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cerrar</fullName>
                </value>
                <value>
                    <fullName>Redes</fullName>
                </value>
                <value>
                    <fullName>Infraestructura</fullName>
                </value>
                <value>
                    <fullName>Datacenter</fullName>
                </value>
                <value>
                    <fullName>Seguridad Informática</fullName>
                </value>
                <value>
                    <fullName>Soluciones Móviles</fullName>
                </value>
                <value>
                    <fullName>Busisness Inteligent</fullName>
                </value>
                <value>
                    <fullName>Bases de Datos</fullName>
                </value>
                <value>
                    <fullName>Aplicaciones</fullName>
                </value>
                <value>
                    <fullName>RRHH</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Abastecimiento</fullName>
                </value>
                <value>
                    <fullName>Ventas</fullName>
                </value>
                <value>
                    <fullName>Finanzas</fullName>
                </value>
                <value>
                    <fullName>Administración</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__inOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incluir al Organigrama</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaxCondition__c</fullName>
        <label>TaxCondition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumidor Final</fullName>
                </value>
                <value>
                    <fullName>Monotributista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact Validated</description>
        <inlineHelpText>Contact Validated</inlineHelpText>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to indicate what is the work team that the employee or agent belongs to.</description>
        <label>Work Team</label>
        <referenceTo>WorkTeam__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Age__c</fullName>
        <formula>IF(MONTH(TODAY())&gt;MONTH(Birthdate),YEAR(TODAY())-YEAR(Birthdate),IF(AND(MONTH(TODAY())=MONTH(Birthdate),DAY(TODAY())&gt;=DAY(Birthdate)),YEAR(TODAY())-YEAR(Birthdate),(YEAR(TODAY())-YEAR(Birthdate))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AnnualIncome__c</fullName>
        <description>Contact&apos;s Annual Income</description>
        <label>Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specify if the contact is authorized to initiate any change on Account.</description>
        <inlineHelpText>Specify if the contact is authorized to initiate any change on Account.</inlineHelpText>
        <label>Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomerSentiment__c</fullName>
        <label>Customer Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Disgruntled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DaysSinceLastContact__c</fullName>
        <formula>IF( (TODAY() - vlocity_cmt__LastContactbyRecordOwner__c)&gt;0, (TODAY() - vlocity_cmt__LastContactbyRecordOwner__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DriversLicenseNumber__c</fullName>
        <description>Driver&apos;s License Number</description>
        <label>Driver&apos;s License Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EmploymentStatus__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full-Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part-Time</fullName>
                </value>
                <value>
                    <fullName>Self-Employed</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsEmployee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag indicates if the contact is a partner</description>
        <label>Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Person Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastContactbyRecordOwner__c</fullName>
        <label>Last Contact by Record Owner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Location__c</fullName>
        <label>Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NetWorth__c</fullName>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Occupation__c</fullName>
        <description>Occupation</description>
        <label>Occupation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>One-to-One relationship to Party Object</description>
        <label>Party</label>
        <referenceTo>vlocity_cmt__Party__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PrimaryEmployerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employer</description>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SocialSecurityNumber__c</fullName>
        <description>Social Security Number</description>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StateOfIssuance__c</fullName>
        <label>State of Issuance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potencial</fullName>
                </value>
                <value>
                    <fullName>Activo</fullName>
                </value>
                <value>
                    <fullName>Inactivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TaxId__c</fullName>
        <label>Tax ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Licensed Agent</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Associate Agent</fullName>
                </value>
                <value>
                    <fullName>Managing Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserEmployeeNumber__c</fullName>
        <formula>vlocity_cmt__UserId__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__WebSite__c</fullName>
        <label>Web Site</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.ALLOW_PORTAL_SELF_REG</columns>
        <columns>Gender__c</columns>
        <columns>DocumentNumber__c</columns>
        <columns>DocumentType__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DocumentType__c</field>
            <operation>equals</operation>
            <value>DNI</value>
        </filters>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_cmt__MobilePhoneContact</fullName>
        <active>true</active>
        <label>MobilePhoneContact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Fields_Can_Modified_by_CSR</fullName>
        <active>true</active>
        <description>Contact Fields Can Modified by CSR prior to account creation</description>
        <errorConditionFormula>AND( NOT(CONTAINS($Profile.Name, &apos;Atencion a Clientes&apos;)) ,ISBLANK( AccountId ), OR(ISCHANGED( DocumentNumber__c ), ISCHANGED( DocumentType__c ), ISCHANGED( Gender__c ), ISCHANGED( Birthdate), ISCHANGED( Email), ISCHANGED(FirstName), ISCHANGED(LastName) ) )</errorConditionFormula>
        <errorMessage>Tipo y Nro Documento Genero, Nombre y Apellido, Fecha de Nacimiento, Mail Fields cannot be modified  </errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Fields_Not_Be_Edited</fullName>
        <active>true</active>
        <description>Contact fields 
Type and No. Document
Gender
Name and surname
Birthdate
Mail

should not be edited once Account is linked.</description>
        <errorConditionFormula>AND(  CONTAINS($Profile.Name, &apos;Atencion a Clientes&apos;)  ,NOT(ISBLANK( AccountId )), OR(ISCHANGED( DocumentNumber__c ), ISCHANGED( DocumentType__c ), ISCHANGED( Gender__c ), ISCHANGED( Birthdate), ISCHANGED( Email), ISCHANGED(FirstName), ISCHANGED(LastName) ) )</errorConditionFormula>
        <errorMessage>Document Number, Document Type, Gender, BirthDate, Email, FirstName, LastName cannot be edited once Account is linked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCP_Certa_GC__Movil_solo_numeros</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK( MobilePhone ) , false, NOT(ISNUMBER(MobilePhone)))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>El telefono solo puede poseer caracteres numericos</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCP_Certa_GC__fecha_de_nacimiento_menor_a_hoy</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK( Birthdate ) , false, Birthdate &gt; TODAY() )</errorConditionFormula>
        <errorDisplayField>Birthdate</errorDisplayField>
        <errorMessage>La fecha de nacimiento debe ser un valor menor a hoy</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SCP_Certa_GC__telefono_solo_numerico</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISBLANK(Phone) , false, NOT(ISNUMBER( Phone )))</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>El telefono solo puede poseer caracteres numericos</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__EnforceSocialSecurityNumberlength</fullName>
        <active>false</active>
        <errorConditionFormula>vlocity_cmt__SocialSecurityNumber__c !=null &amp;&amp; LEN(vlocity_cmt__SocialSecurityNumber__c) != 9</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__SocialSecurityNumber__c</errorDisplayField>
        <errorMessage>Social Security Number is 9-digit number</errorMessage>
    </validationRules>
</CustomObject>